--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,18 +14,87 @@
 
 <!-- Then we build the nav bar. -->
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <ul class="nav navbar-nav">
-        {% for entry in site.data.navigation %}
-            {% if entry.url == current_page %}
-                {% assign current = 'class="active"' %}
-            {% else %}
-                <!-- We have to declare it 'null' to ensure it doesn't propagate. -->
-                {% assign current = 'class=""' %}
-            {% endif %}
-            <li{{ current }}><a href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a></li>
-        {% endfor %}
-    </ul>
-  </div>
-</nav>
+<div class="navbar" id="myNavbar">
+    {% for entry in site.data.navigation %}
+        {% if entry.url == current_page %}
+            {% assign current = 'class="active"' %}
+        {% else %}
+            <!-- We have to declare it 'null' to ensure it doesn't propagate. -->
+            {% assign current = 'class=""' %}
+        {% endif %}
+        <a {{ current }} href="{{ site.baseurl }}{{ entry.url }}">{{ entry.title }}</a>
+    {% endfor %}
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+    </a>
+</div>
+
+<style>
+    /* Add a black background color to the top navigation */
+.navbar {
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add an active class to highlight the current page */
+.navbar a.active {
+  background-color: #000;
+  color: white;
+}
+
+/* Hide the link that should open and close the navbar on small screens */
+.navbar .icon {
+  display: none;
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the navbar (.icon) */
+@media screen and (max-width: 600px) {
+  .navbar a:not(:first-child) {display: none;}
+  .navbar a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the navbar with JavaScript when the user clicks on the icon. This class makes the navbar look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .navbar.responsive {position: relative;}
+  .navbar.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+</style>
+
+<script>
+    function myFunction() {
+    var x = document.getElementById("myNavbar");
+    if (x.className === "navbar") {
+        x.className += " responsive";
+    } else {
+        x.className = "navbar";
+    }
+}
+</script>
